# PicoW-Remote-Blink

./: CMakeLists.txt
SPI/controller/: controller.cpp
controller/: CMakeLists.txt  controller.cpp
peripheral/: CMakeLists.txt  peripheral.cpp
